Add module for engine