@@ -20,96 +20,11 @@
       <version>${project.version}</version>
       <scope>runtime</scope>
     </dependency>
-    <!-- FST -->
+    <!-- Engine -->
     <dependency>
-      <groupId>de.ruedigermoeller</groupId>
-      <artifactId>fst</artifactId>
-      <version>${fst.version}</version>
-    </dependency>
-    <!-- LibGDX -->
-    <dependency>
-      <groupId>com.badlogicgames.gdx</groupId>
-      <artifactId>gdx</artifactId>
-      <version>${gdx.version}</version>
-    </dependency>
-    <!-- LibGDX Tools -->
-    <dependency>
-      <groupId>com.badlogicgames.gdx</groupId>
-      <artifactId>gdx-tools</artifactId>
-      <version>${gdx.version}</version>
-    </dependency>
-    <!-- LibGDX for desktop -->
-    <dependency>
-      <groupId>com.badlogicgames.gdx</groupId>
-      <artifactId>gdx-platform</artifactId>
-      <version>${gdx.version}</version>
-      <classifier>natives-desktop</classifier>
-    </dependency>
-    <dependency>
-      <groupId>com.badlogicgames.gdx</groupId>
-      <artifactId>gdx-backend-lwjgl3</artifactId>
-      <version>${gdx.version}</version>
-    </dependency>
-    <!-- LibGDX Box2D -->
-    <dependency>
-      <groupId>com.badlogicgames.gdx</groupId>
-      <artifactId>gdx-box2d</artifactId>
-      <version>${gdx.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.badlogicgames.gdx</groupId>
-      <artifactId>gdx-box2d-platform</artifactId>
-      <version>${gdx.version}</version>
-      <classifier>natives-desktop</classifier>
-    </dependency>
-    <!-- LibGDX Box2D lights -->
-    <dependency>
-      <groupId>com.badlogicgames.box2dlights</groupId>
-      <artifactId>box2dlights</artifactId>
-      <version>${box2dlights.version}</version>
-    </dependency>
-    <!-- LibGDX OpenAL -->
-    <dependency>
-      <groupId>com.badlogicgames.gdx</groupId>
-      <artifactId>gdx-openal</artifactId>
-      <version>${gdx-openal.version}</version>
-    </dependency>
-    <!-- Junit -->
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-surefire-plugin</artifactId>
-      <version>${surefire.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- Mockito -->
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>${mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- Logger -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j-api.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${logback-classic.version}</version>
+      <groupId>chae4ek</groupId>
+      <artifactId>engine</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 
@@ -139,24 +54,6 @@
         </executions>
         <configuration>
           <mainClass>chae4ek.transgura.AtlasLoader</mainClass>
-        </configuration>
-      </plugin>
-      <!-- For Junit -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${surefire.version}</version>
-        <configuration>
-          <!-- For FST -->
-          <argLine>
-            --add-opens=java.base/java.lang=ALL-UNNAMED
-            --add-opens=java.base/java.math=ALL-UNNAMED
-            --add-opens=java.base/java.util=ALL-UNNAMED
-            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-            --add-opens=java.base/java.net=ALL-UNNAMED
-            --add-opens=java.base/java.text=ALL-UNNAMED
-            --add-opens=java.sql/java.sql=ALL-UNNAMED
-          </argLine>
         </configuration>
       </plugin>
       <!-- Compilation -->
